Changelog
=========

2020.2.0rc2 (unreleased)
------------------------

- Add hidden flag to OrgUnits and AdminUnits. [njohner]
- Disallow choosing hidden orgunits as responsible_client in tasks and forwardings. [njohner]
- Do not display hidden orgunits in orgunit selector. [njohner]
- OfficeOnline: Show specific message for collaborative checkouts. [lgraf]
- Document GET API: Also include info about collaborative checkouts. [lgraf]
- Also return @id in globalindex endpoint. [njohner]
- Extend the document serialization with `checked_out_fullname`. [elioschmutz]
- Add a new profile to setup a cas auth plugin for the ianus portal. [elioschmutz]
- Return actual data in TeamGet and UserGet. [njohner]
- Fix encoding issue in query-source `query` parameter. [deiferni]
- Do no longer send activity mails from the current user due to spam issues when the user's email address does not match the portal domain. [elioschmutz]
- OfficeOnline: Use collaborative checkout / checkins. [lgraf]
- Add list workspaces action for new frontend. [njohner]
- Add additional fields to @user-listing endpoint. [njohner]
- Add ogds user listing via @user-listing endpoint. [deiferni]
- Add ogds team listing via @team-listing endpoint. [deiferni]


2020.2.0rc1 (2020-03-11)
------------------------

- Extend the @config endpoint with an `apps_url` attribute. [elioschmutz]
- Extend policytemplates to use the single thread setup. [elioschmutz]
- Extend policytemplates with workspace deployment. [elioschmutz]
- Extend policytemplates with gever-ui activation. [elioschmutz]
- Add API service to create document from template. [deiferni]
- Restrict `geverui` cookie to admin unit. [elioschmutz]
- Extend the opengever deployment directive with workspace roles. [elioschmutz]
- Add API endpoint to copy documents from a workspace. [njohner]
- Add API endpoint to list documents in linked workspace. [njohner]
- Allow copying mails to linked workspace. [njohner]